# actigo90

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  README  README.md
angular/: .angular-cli.json  README.md  package.json
angular/e2e/: app.e2e-spec.ts
angular/src/: index.html  styles.scss
angular/src/app/: app-routing.module.ts  app.component.html  app.component.ts  app.module.ts
angular/src/app/admin/: admin.component.html  admin.component.scss  admin.component.ts
angular/src/app/confirm-modal/: confirm-modal.component.html  confirm-modal.component.ts
angular/src/app/contact/: contact.component.html  contact.component.scss
angular/src/app/finance-data/: finance-data.component.html  finance-data.component.scss  finance-data.component.spec.ts  finance-data.component.ts
angular/src/app/financial-data/: financial-data.component.html  financial-data.component.scss  financial-data.component.ts
angular/src/app/home/: home.component.html  home.component.scss
angular/src/app/login/: login.component.html  login.component.scss  login.component.ts
angular/src/app/models/: delta.model.ts  price.model.ts  spot.model.ts  stock.model.ts  user.model.ts
angular/src/app/pricing/: pricing.component.html  pricing.component.scss  pricing.component.ts
angular/src/app/services/: auth.guard.spec.ts  auth.guard.ts  authentication.service.ts  delta.service.ts  financial-data.service.spec.ts  financial-data.service.ts  price.service.ts  pricer.service.spec.ts  pricer.service.ts  spot.service.ts  stock.service.ts  user.service.ts  yahoo-finance.service.spec.ts  yahoo-finance.service.ts
angular/src/app/stock/: stock.component.html  stock.component.scss  stock.component.ts
angular/src/app/tracking/: tracking.component.html  tracking.component.scss  tracking.component.ts
doc/: doxy.rc
express/: app.js  package.json
express/config/: db-init.js  production.json  test.json
express/controllers/: delta.controller.js  price.controller.js  pricer.controller.js  spot.controller.js  stock.controller.js  user.controller.js  yahoo-finance.controller.js
express/models/: delta.model.js  price.model.js  spot.model.js  stock.model.js  user.model.js
express/routes/: api.route.js  delta.route.js  index.route.js  price.route.js  pricer.route.js  spot.route.js  stock.route.js  user.route.js  yahoo-finance.route.js
express/services/: delta.service.js  price.service.js  pricer.service.js  spot.service.js  stock.service.js  user.service.js  yahoo-finance.service.js
express/tests/: load.yml  unit-tests.js
express/tests/unit-tests/: delta.route.test.js  price.route.test.js  spot.route.test.js  stock.route.test.js  user.route.test.js  yahoo-finance.route.test.js
pricer/: CMakeLists.txt
pricer/exe/: computeActigoDelta.cpp
pricer/src/: CMakeLists.txt
pricer/src/pricer/: Actigo.cpp  Actigo.hpp  Basket.hpp  BlackScholesModel.cpp  BlackScholesModel.hpp  Calibration.cpp  Calibration.hpp  Data.cpp  Data.hpp  DataBaseManager.cpp  DataBaseManager.hpp  MonteCarlo.cpp  MonteCarlo.hpp  Option.hpp  parser.cpp  parser.hpp  pricer_utils.cpp  pricer_utils.hpp
pricer/src/quote/: DataBaseManager.cpp  DataBaseManager.hpp  curl_utils.hpp  quote.cpp  quote.hpp  spot.cpp  spot.hpp  time_utils.cpp  time_utils.hpp
pricer/test/: CMakeLists.txt  PortfolioValue.cpp  PortfolioValueAtT.cpp  computeActigoDelta.cpp  dbManagerTest.cpp  portfolioValue.cpp  portfolioValueAtT.cpp  pricerActigo.cpp  pricerActigoRealData.cpp  pricerActigoSimulatedData.cpp  pricerActigoTranslated.cpp  reset_db.cpp  testCalibrationActigo.cpp  testDelta.cpp  testDeltaActigo.cpp  test_actigo.cpp  test_priceT.cpp
pricer/test/pricer/: test_calibration.cpp  test_pricer_actigo.cpp
pricer/test/quote/: DataBaseManagerTest.cpp  QuoteTest.cpp  TimeUtilsTest.cpp
src/: Actigo.cpp  Actigo.hpp  BlackScholesModel.cpp  BlackScholesModel.hpp  CMakeCache.txt  CMakeLists.txt  Calibration.cpp  Calibration.hpp  Calibration.hpp~  Option.hpp  Performance.cpp  pricer.cpp  test_asian.cpp  test_basket_1.cpp  test_basket_priceT.cpp  test_calibration.cpp  test_priceT.cpp
src/pricer/: Actigo.cpp  Actigo.hpp  Asian.cpp  Asian.hpp  Basket.cpp  Basket.hpp  BlackScholesModel.cpp  BlackScholesModel.hpp  Calibration.cpp  Calibration.hpp  Data.cpp  Data.hpp  MonteCarlo.cpp  MonteCarlo.hpp  Option.hpp  Performance.cpp  Performance.hpp  data.hpp  mc_example.cpp  pricer.cpp  pricerActigo.cpp  test_actigo.cpp
src/quote/: curl_utils.cpp  curl_utils.hpp  forex.cpp  forex.hpp  main.cpp  quote.cpp  quote.hpp  spot.cpp  spot.hpp  time_utils.cpp  time_utils.hpp
test/: CMakeLists.txt  pricerActigo.cpp  pricerActigoTranslated.cpp  testCalibrationActigo.cpp  testDeltaActigo.cpp  testPL.cpp  testPositifT.cpp  test_actigo.cpp  test_basket_1.cpp  test_basket_2.cpp  test_calibration.cpp  test_perf.cpp
test/pricer/: test_calibration.cpp
test/quote/: ForexMapTest.cpp  ForexTest.cpp  QuoteTest.cpp
